# GitRust

./: Cargo.toml
src/: main.rs  state.rs
src/activity/: handlers.rs  model.rs  service.rs
src/auth/: handlers.rs  routes.rs  service.rs
src/captcha/: service.rs
src/email/: service.rs
src/git_core/: blob.rs  commit.rs  diff.rs  repo.rs  tree.rs
src/groups/: handlers.rs  model.rs  routes.rs  service.rs
src/issues/: handlers.rs  model.rs  routes.rs  service.rs
src/labels/: handlers.rs  mod.rs  routes.rs  service.rs
src/markdown/: render.rs
src/members/: handlers.rs  mod.rs  routes.rs  service.rs
src/merge_requests/: handlers.rs  model.rs  routes.rs  service.rs
src/middleware/: auth.rs
src/milestones/: handlers.rs  model.rs  routes.rs  service.rs
src/projects/: handlers.rs  routes.rs
src/repositories/: git_http.rs  handlers.rs  mod.rs  model.rs  routes.rs  service.rs
src/users/: handlers.rs  model.rs  routes.rs  service.rs
src/wiki/: handlers.rs  mod.rs  model.rs  routes.rs  service.rs
static/js/: app.js
templates/pages/: home.jinja
templates/pages/auth/: login.jinja  register.jinja
templates/pages/projects/: group.jinja  join.jinja  list.jinja  new_group.jinja  new_repo.jinja
templates/pages/repo/: blob.jinja  branches.jinja  commit.jinja  commits.jinja  labels.jinja  layout.jinja  members.jinja  overview.jinja  settings.jinja  tree.jinja
templates/pages/repo/issues/: detail.jinja  list.jinja  new.jinja
templates/pages/user/: profile.jinja  settings.jinja
templates/partials/: sidebar_repo.jinja
(+7 files in other folders)
