[package]
name = "gitrust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "limit", "compression-gzip"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

minijinja = { version = "2", features = ["json", "loader"] }
minijinja-autoreload = "2"

tower-sessions = "0.14"
argon2 = "0.5"
jsonwebtoken = "10"

git2 = "0.20"

captcha-rs = { version = "0.5", features = ["stateless"] }

comrak = { version = "0.33", default-features = false, features = ["syntect"] }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "html"] }
ammonia = "4"

russh = "0.45"
russh-keys = "0.45"
async-trait = "0.1"

lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
thiserror = "2"
dotenvy = "0.15"
anyhow = "1"
